# UnHook

./: .dockerignore  .gitignore  CODING_STANDARDS_AND_ARCHITECTURE_RULES.md  DOCKER_SETUP.md  Dockerfile  README.md  docker-compose.yml  railway.newspaper_service.json  run_unhook_pipeline.sh  setup_cookies.sh  teerth_api_collection.json  test_newspaper_endpoints.py  test_youtube_cookies_github.py
commons/: __init__.py  pyproject.toml
commons/ai/: base.py  config.py
commons/infra/dependency_injection/: injectable.py  registration.py
commons/messaging/: __init__.py  config.py  consumer.py  handler.py  models.py  producer.py  router.py
commons/messaging/aggregated_schedule/: __init__.py  models.py  repository.py  service.py
commons/messaging/config/: __init__.py  config.py
commons/messaging/exceptions/: __init__.py  reschedule.py
commons/messaging/models/: __init__.py  models.py
commons/metrics_processor/: __init__.py  base_metrics_processor.py
commons/repository/mongo/: optimistic_locking_utils.py
commons/service_context/: __init__.py  base_service_context.py
data_collector_service/: .env  .gitignore  Dockerfile  app.py  pyproject.toml  service.py
data_collector_service/collectors/: base_discover.py  base_static.py
data_collector_service/collectors/youtube/: discover.py  static.py
data_collector_service/config/: __init__.py  config.py  local_config.yaml  prod_config.yaml
data_collector_service/exceptions/: user_exception.py
data_collector_service/infra/dependency_injection/: injectable.py  registration.py
data_collector_service/messaging/: messaging_handler.py
data_collector_service/messaging/config/: messaging_config.py
data_collector_service/messaging/models/: aggregated_schedule_commands.py  commands.py
data_collector_service/messaging/redis/: consumer.py  producer.py
data_collector_service/messaging/routers/: command_router.py  event_router.py
data_collector_service/metrics_processor/: __init__.py  data_collector_metrics_processor.py
data_collector_service/models/: __init__.py  enums.py  generated_content.py  user_collected_content.py
data_collector_service/models/youtube/: __init__.py  subtitle_models.py  subtitles.py  youtube_video_details.py
data_collector_service/repositories/: user_collected_content_repository.py  youtube_collected_content_repository.py  youtube_content_ephemeral_repository.py
data_collector_service/repositories/mongodb/: __init__.py  data_migration.py  mongodb_aggregated_schedule_repository.py  user_collected_content_repository.py  youtube_collected_content_repository.py
data_collector_service/service_context/: __init__.py  data_collector_service_context.py
data_collector_service/services/collection/: collection_service.py  start_user_collection_service.py
data_collector_service/services/processing/: transition_user_collected_content_status_to_processed_service.py
data_collector_service/services/rejection/: reject_content_service.py
data_collector_service/services/submit/: submit_for_processing_service.py
data_collector_service/tests/: test_messaging.py
data_processing_service/: .gitignore  Dockerfile  __init__.py  app.py  pyproject.toml
data_processing_service/ai/: __init__.py  base.py  config.py
data_processing_service/config/: __init__.py  config.py  local_config.yaml  prod_config.yaml
data_processing_service/infra/dependency_injection/: registration.py
data_processing_service/messaging/config/: messaging_config.py
data_processing_service/messaging/models/: commands.py
data_processing_service/messaging/redis/: consumer.py  producer.py
data_processing_service/messaging/routers/: command_router.py  event_router.py
data_processing_service/models/: __init__.py  generated_content.py
data_processing_service/models/youtube/: subtitle_data.py
data_processing_service/repositories/: generated_content_repository.py  user_content_repository.py  youtube_collected_content_repository.py
data_processing_service/repositories/ephemeral/: youtube_content_ephemeral_repository.py
data_processing_service/repositories/mongodb/: data_migration.py  generated_content_repository.py  mongodb_aggregated_schedule_repository.py  (+2 more)
data_processing_service/service_context/: __init__.py  data_processing_service_context.py
data_processing_service/temp/: json.txt  srt.txt  srv.txt  ttml.txt  vtt.txt
data_processing_service/utils/: content_utils.py
newspaper_service/: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  railway.json
newspaper_service/api/: __init__.py  app.py  dependencies.py
newspaper_service/config/: __init__.py  config.py  local_config.yaml  prod_config.yaml
newspaper_service/models/: __init__.py  generated_content_interaction.py  generated_content_interaction_list.py  generated_content_list.py  generated_content_response.py  newspaper.py  newspaper_article_candidate.py  newspaper_list.py  newspaper_response.py  newspaper_v2.py
newspaper_service/repositories/: __init__.py  generated_content_interaction_repository.py  generated_content_repository.py  newspaper_article_candidate_repository.py  newspaper_repository.py  newspaper_v2_repository.py  user_collected_content_repository.py  youtube_collected_content_repository.py
newspaper_service/service_context/: __init__.py  newspaper_service_context.py
newspaper_service/services/: __init__.py  create_newspaper_service.py  generated_content_interaction_service.py  generated_content_service.py  newspaper_api_service.py  newspaper_service.py  newspaper_utils.py
user_service/: .dockerignore  .gitignore  Dockerfile  __init__.py  pyproject.toml
user_service/api/: __init__.py  app.py  dependencies.py
user_service/config/: __init__.py  config.py  local_config.yaml  prod_config.yaml
user_service/controllers/: __init__.py  user_controller.py
user_service/exceptions/: base.py
user_service/models/: __init__.py  enums.py  interests.py  manual_config.py  user.py  youtube_config.py
user_service/repositories/: __init__.py  user_repository.py
user_service/services/: __init__.py  user_service.py
(+2000 files in other folders)
