[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "commons"
version = "0.1.0"
description = "Shared utilities and base classes for UnHook services"
requires-python = ">=3.10"
dependencies = []

[tool.hatch.build.targets.wheel]
sources = {"." = "commons"}

[tool.uv]
package = false
