[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-collector-service"
version = "0.1.0"
description = "Service for collecting data from various sources"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2023.12.30",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "motor>=3.0.0",  # Required for MongoDB operations
    "pymongo>=4.0.0",  # Required for MongoDB operations
    "httpx>=0.24.0",  # Required for HTTP client operations
    "langcodes>=3.3.0", # Required for language code validation
    "user-service @ file:///Users/purushottamhari/youtube_newspaper_scrape/user_service"  # Local dependency
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 