[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-collector-service"
version = "0.1.0"
description = "Service for collecting data from various sources"
requires-python = ">=3.8"
dependencies = [
    "yt-dlp>=2025.07.21",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "motor>=3.0.0",  # Required for MongoDB operations
    "pymongo>=4.0.0",  # Required for MongoDB operations
    "httpx>=0.24.0",  # Required for HTTP client operations
    "langcodes>=3.3.0", # Required for language code validation
    "user-service @ file:///Users/puru/Workspace/Unhook/user_service",  # Local dependency
    "curl-cffi"
]

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 