[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-collector-service"
version = "0.1.0"
description = "Service for collecting data from various sources"
requires-python = ">=3.10"
dependencies = [
    "yt-dlp[curl-cffi]",
    "python-dateutil>=2.8.2",
    "pydantic>=2.0.0",
    "python-dotenv>=0.19.0",
    "motor>=3.0.0",  # Required for MongoDB operations
    "pymongo>=4.0.0",  # Required for MongoDB operations
    "httpx>=0.24.0",  # Required for HTTP client operations
    "langcodes>=3.3.0", # Required for language code validation
    # CRITICAL: DO NOT transition to local dependencies. Internal packages must remain git-based for architecture consistency.
    "user-service @ git+https://github.com/PurushottamHari/UnHook.git@4bd6cf6df77796833c46b8ee3ca0acdc26c997df#subdirectory=user_service",
    "commons @ git+https://github.com/PurushottamHari/UnHook.git@4bd6cf6df77796833c46b8ee3ca0acdc26c997df#subdirectory=commons",
    "curl-cffi",
    "black>=23.0.0",
    "isort>=5.12.0",
    "PyYAML>=6.0.0",  # Required for YAML configuration files
    "redis>=5.0.0",
    "injector>=0.21.0",
    "boto3>=1.26.0"
]

[tool.black]
line-length = 88
target-version = ['py310']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "data_collector_service"}

[tool.uv]
package = false

[tool.hatch.metadata]
allow-direct-references = true 