[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-processing-service"
version = "0.1.0"
description = "Service for processing and analyzing collected data"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=0.19.0",
    "data-collector-service @ file:///Users/purushottamhari/youtube_newspaper_scrape/data_collector_service",
    "user-service @ file:///Users/purushottamhari/youtube_newspaper_scrape/user_service",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain_deepseek>=0.1.3",
    "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 