[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-processing-service"
version = "0.1.0"
description = "Service for processing and analyzing collected data"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=0.19.0",
    "data-collector-service @ file:///Users/puru/Workspace/UnHook/data_collector_service",
    "user-service @ file:///Users/puru/Workspace/UnHook/user_service",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain_deepseek>=0.1.3",
    "requests",
    "curl-cffi",
    "black>=23.0.0",
    "isort>=5.12.0",
    "PyYAML>=6.0.0"  # Required for YAML configuration files
]

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.metadata]
allow-direct-references = true 