[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-processing-service"
version = "0.1.0"
description = "Service for processing and analyzing collected data"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "python-dotenv>=0.19.0",
    # CRITICAL: DO NOT transition to local dependencies. Internal packages must remain git-based for architecture consistency.
    "data-collector-service @ git+https://github.com/PurushottamHari/UnHook.git@c031c0a053087da3fa5d312702fd63e0392cba4c#subdirectory=data_collector_service",
    "user-service @ git+https://github.com/PurushottamHari/UnHook.git@c031c0a053087da3fa5d312702fd63e0392cba4c#subdirectory=user_service",
    "commons @ git+https://github.com/PurushottamHari/UnHook.git@c031c0a053087da3fa5d312702fd63e0392cba4c#subdirectory=commons",
    "requests",
    "curl-cffi",
    "black>=23.0.0",
    "isort>=5.12.0",
    "PyYAML>=6.0.0",  # Required for YAML configuration files
    "redis>=5.0.0",
    "injector>=0.21.0",
    "httpx>=0.24.0"
]

[tool.black]
line-length = 88
target-version = ['py38']
skip-string-normalization = false

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true

[tool.hatch.build.targets.wheel]
packages = ["."]
sources = {"." = "data_processing_service"}

[tool.uv]
package = false

[tool.hatch.metadata]
allow-direct-references = true 