[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "user-service"
version = "0.1.0"
description = "User service for managing user data and preferences"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.2",
    "fastapi>=0.68.0",
    "uvicorn>=0.15.0",
    "motor>=3.0.0",
    "pymongo>=4.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=0.19.0",
    "typing-extensions>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."] 